DuPont DevSB/src/objects/ccrz__E_RuleSourceSKU__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__MinQty__c</fullName>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <label>Product Item</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>RuleSourceSKUs</relationshipLabel>
        <relationshipName>RuleSourceSKUs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>ccrz__E_Rule__c</referenceTo>
        <relationshipName>RuleSourceSKUs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CC Rule Source SKU</label>
    <nameField>
        <label>RuleSourceSKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC RuleSourceSKUs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>